--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,16 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/chatAppBar"
-            layout="@layout/app_toolbar" />
-
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/messageSwipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/linearLayout"
-            android:layout_below="@+id/chatAppBar">
+            android:layout_above="@+id/linearLayout">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/messageList"
@@ -47,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
                 android:hint="Enter message"
+                android:minHeight="56dp"
                 android:padding="10dp" />
 
             <ImageButton
